--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap');
 
 .App {
   min-height: 100vh;
@@ -7,6 +7,6 @@
   background-size: cover;
   background-position: center;
   text-align: center;
-  font-family: "Work Sans", sans-serif;
-  color: black;
+  font-family: 'Work Sans', sans-serif;
+  color: black
 }
